--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "debug": "~2.6.3",
     "express": "~4.15.2",
     "jade": "~1.11.0",
+    "jsonfile": "^3.0.0",
     "morgan": "~1.8.1",
+    "say": "^0.11.0",
     "serve-favicon": "~2.4.2"
   }
 }
